<resources>
    <string name="app_name">umc_study</string>
    <string name="profile_setting_title">프로필 및 기타 설정</string>
    <string name="back_button">Back Button Img</string>
    <string name="user1">라나</string>
    <string name="user2">이가영</string>
    <string name="user3">ㅇㄱㅇ</string>
    <string name="kids_profile_text">키즈</string>
    <string name="new_user_button_info">프로필 추기</string>
    <string name="edit_profile_setting">프로필 관리</string>
    <string name="manage_notification">알림설정</string>
    <string name="my_list_contents">내가 찜한 콘텐츠</string>
    <string name="app_setting">앱 설정</string>
    <string name="account">계정</string>
    <string name="client_center">코객 센터</string>
    <string name="logout">로그아웃</string>
    <string name="play">재생</string>
    <string name="info">정보</string>
    <string name="series">시리즈</string>
    <string name="movie">영화</string>
    <string name="category">카테고리</string>
    <string name="games">Games</string>
    <string name="game">게임</string>
    <string name="mobile_game">모바일 게임</string>
    <string name="games_lol_name">마법공학 아수라장: 리그오브레전드</string>
    <string name="games_cook_name">파티셰를 찾아라!</string>
    <string name="games_lol_explain">리듬  SF  러닝액션  판타지  음악</string>
    <string name="home">홈</string>
    <string name="new_and_hot">NEW</string>
    <string name="downloaded_contents">저장된 콘텐츠 목록</string>
    <string name="contents_group_title1">즐거운 영어 세상 속으로!</string>
    <string name="series_name1">워킹데드</string>
    <string name="series_walking_dead_explain">아포칼립스  좀비  생존  시리즈물  시즌12</string>
    <string name="week3_standard1_edit_text">텍스트</string>
    <string name="send">전송</string>
    <string name="move">이동</string>
    <string name="choose1">1번 선택</string>
    <string name="choose2">2번 선택</string>
    <string name="select_fragment">Fragment 선택</string>
</resources>