<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <FrameLayout
        android:id="@+id/home_ads_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/netflix_poster_walkingdead"></ImageView>

        <Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/logo_netflix"></ImageView>

            <SearchView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"></SearchView>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_search"></ImageView>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/profileImg1"
                android:layout_marginStart="22dp"></ImageView>
        </Toolbar>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginStart="20dp"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/series"
                android:textSize="14sp"
                android:background="@android:color/transparent"></Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/movie"
                android:textSize="14sp"
                android:background="@android:color/transparent"></Button>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:padding="5dp">
            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_netflix_alphabet"
                android:background="@android:color/transparent"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/series_name1"
                android:textColor="@color/white"
                android:textSize="25sp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/series_walking_dead_explain"
                android:textColor="@color/netflix_gray_text"
                android:textSize="15sp"></TextView>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/home_ads_main"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_add"
            android:text="@string/my_list_contents"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:paddingTop="15dp"
            android:layout_marginEnd="20dp">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_play"
            android:text="@string/play"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_info"
            android:text="@string/info"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:paddingTop="15dp">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_list_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintBottom_toTopOf="@+id/netflix_home_bottomBar">

        <TextView
            android:id="@+id/games_mobile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="9dp"
            android:layout_marginTop="9dp"
            android:text="@string/contents_group_title1"
            android:textColor="@color/white"
            android:textSize="20sp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/games_mobile_title"
            android:layout_margin="9dp">

            <ImageView
                android:id="@+id/home_content_group1"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:src="@drawable/netflix_poster_crown"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="9dp"/>

            <ImageView
                android:id="@+id/home_content_group2"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:src="@drawable/netflix_poster_crown"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="9dp"/>

            <ImageView
                android:id="@+id/home_content_group3"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:src="@drawable/netflix_poster_crown"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="9dp"/>

            <ImageView
                android:id="@+id/home_content_group4"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:src="@drawable/netflix_poster_crown"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="9dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/netflix_home_bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/netflix_gray"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_home"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:paddingTop="15dp">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_game"
            android:text="@string/games"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:paddingTop="15dp">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_new"
            android:text="@string/new_and_hot"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:paddingTop="15dp">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_arrow_circle_down"
            android:text="@string/downloaded_contents"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:paddingTop="15dp">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>