<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cstLyTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1.0">

        <ImageButton
            android:id="@+id/setting_page_backBtn"
            android:contentDescription="@string/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@android:color/transparent">
        </ImageButton>

        <TextView
            android:id="@+id/setting_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_setting_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/setting_page_backBtn"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="9dp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/setting_info"
            app:layout_constraintTop_toBottomOf="@+id/setting_info"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="10dp">

                <ImageView
                    android:id="@+id/main_profile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/profileImg1"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user1"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">
                </TextView>
            </LinearLayout>


            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/profileImg1"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp" />

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/profileImg1"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp" />

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/profileImg1"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp" />

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/profileImg1"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cstLyMid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cstLyTop"
        app:layout_constraintWidth_percent="1">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>